<resources>
    <string name="app_name">Create Dictionary</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="share">Send / Share</string>
    <string name="rename_dic">Rename</string>
    <string name="about_app">About app</string>
    <string name="settings">Settings</string>
    <string name="text_translate">Text translation</string>
    <string name="source_text"> Text</string>
    <string name="translation"> Translate</string>
    <string name="translated_text"> Translated text</string>
    <string name="pdf_dic">Save as PDF</string>
    <string name="search">Search</string>
    <string name="Actions">Actions</string>
    <string name="add_language">Add dictionary</string>
    <string name="save">Save</string>
    <string name="translate">Translate</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="add_word">Add word</string>
    <string name="mind_dic">لغتنامه من</string>
    <string name="interested_words">Favorite words</string>
    <string name="recent_words">Recent words</string>
    <string name="verb">Verb</string>
    <string name="noun">Noun</string>
    <string name="adjective">Adjective</string>
    <string name="destination_language_hint">Select the destination language</string>
    <string name="home_language_hint">Select the source language</string>
    <string name="search_hint">Search</string>
    <string name="adverb">Adverb</string>
    <string name="word">Word</string>
    <string name="mean">meaning</string>
    <string name="description">Descriptions</string>
    <string name="dark_mode">Study at night</string>
    <string name="say">Say something</string>
    <string name="saying">Say something</string>
    <string name="or">OR</string>
    <string name="fill_fields">Please fill all the fields</string>
    <string name="edit_dic">Edit dictionary name</string>
    <string name="select_word_type">please select type of word</string>
    <string name="translating">Translating ...</string>
    <string name="downloading_translator">Downloading translator, please wait ...</string>
    <string name="new_word_added">New word added</string>
    <string name="enter_destination">Please enter destination language</string>
    <string name="enter_source">Please enter source language</string>
    <string name="fill_word_entry">Fill word field</string>
    <string name="word_d">Word</string>
    <string name="word_updated">Word updated</string>
    <string name="fill_text_entry">Fill the text field</string>
    <string name="favorite_list_empty">Favorite list is empty!</string>
    <string name="there_is_not_word">There is not eny word!</string>
    <string name="dictionary_saved">Dictionary Saved Successfully</string>
    <string name="incorrect_info">Incorrect information</string>
    <string name="dictionary_updated">Dictionary updated</string>
    <string name="dictionary_deleted">Dictionary deleted</string>
    <string name="dictionary_created">New dictionary created</string>
    <string name="recent_list_empty">Recent words List is empty</string>
    <string name="words_list_empty">The word list is empty, click + to add a word</string>
    <string name="back_pressed">For exit press BACK again</string>
    <string name="delete_dictionary">Delete the dictionary?</string>
    <string name="done">Done</string>
    <string name="delete_word">Delete the word?</string>
    <string name="delete_from_favorite">Remove word from the favorites list?</string>
    <string name="word_deleted">Word deleted</string>

    <string name="check_network">There is a problem connecting to the internet, please make sure you have access to the network</string>


    <string name="share_text">
        \nHello, dear friend, \nIf you have a problem learning words in a new language...\n" +
                                "If you forget the meaning of any word, you have to go to the dictionary or google translate, look and look..." +
                                "\nIf you forget the correct pronunciation of the words you learned and you need to browse quickly and easily..." +
                                "\nI suggest you to definitely download this application :)\n\n
    </string>

    <string name="about_app_text">The program for creating a dictionary with the possibility of creating an unlimited dictionary with more than 30 different languages ​​offline and online, if you use the program online, you can use the translator of the program
Support for speech-to-text recognition in the selected language of the mobile device offline
Ability to pronounce words offline in English, German, French, Chinese and Japanese languages
Ability to translate text online
Ability to search among stored words
Ability to save dictionary as pdf
Ability to mark words as favorite words
Ability to browse recent words (visited or added)
\n🔔 Note: Ads are used inside the program, and a small amount of your net will be used to load ads. Due to the spread of devices and different models of the Android operating system, the performance of the software or its parts may be disrupted on some devices. The dictionary and pronunciation section does not require the Internet and is completely offline.
</string>
    <string name="app_version">Version
1.7
\nLast update
23 August 2022</string>
    <string name="content_description_search">Search for the word you want in this section</string>
    <string name="more">More</string>
    <string name="double_back">To exit, hit the back button again</string>


</resources>
