<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/add_word_card"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="top"
    android:background="?attr/backgroundColor"
    android:elevation="3dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/backgroundColor"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@color/red"
            android:orientation="horizontal"
            android:weightSum="7">

            <ImageButton
                android:id="@+id/cancel_word_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@color/red"
                android:elevation="0dp"
                android:src="@drawable/close_white" />

            <TextView
                android:id="@+id/add_word_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/add_word"
                android:textColor="@color/white"
                android:textSize="20dp" />

            <Button
                android:id="@+id/save_word_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="5"
                android:backgroundTint="@color/red"
                android:elevation="0dp"
                android:gravity="left"
                android:outlineProvider="none"
                android:text="@string/save"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20dp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/idIVMic"
            android:layout_width="78dp"
            android:layout_height="78dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:src="@drawable/mic"
            app:tint="@color/red" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/say"
            android:textAlignment="center"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/or"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="15sp" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/main_word"
            style="@style/ThemeOverlay.Material3.TextInputEditText.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:focusedByDefault="true"
            android:hint="@string/word"
            android:padding="10dp"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusedByDefault="false"
                android:singleLine="true"
                android:textColor="?attr/colorOnSecondary" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            app:singleSelection="true"
            app:singleLine="true"
            app:selectionRequired="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/verb_chip"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/verb"
                android:textSize="14dp"
                />
            <com.google.android.material.chip.Chip
                android:id="@+id/noun_chip"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/noun"
                android:textSize="14dp"
                />
            <com.google.android.material.chip.Chip
                android:id="@+id/adjective_chip"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adjective"
                android:textSize="14dp"
                />
            <com.google.android.material.chip.Chip
                android:id="@+id/adverb_chip"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adverb"
                android:textSize="14dp"
                />

        </com.google.android.material.chip.ChipGroup>

        <Button
            android:id="@+id/idTranslateBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="35dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/button_shape"
            android:text="@string/translate"
            android:textColor="@color/white"
            android:textSize="15dp"
            android:textAllCaps="false"/>

        <TextView
            android:id="@+id/download_info_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:visibility="gone"
            android:textAlignment="center"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="12dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/translation_word"
            style="@style/ThemeOverlay.Material3.TextInputEditText.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:focusedByDefault="true"
            android:hint="@string/mean"
            android:padding="10dp"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusedByDefault="false"
                android:singleLine="true"
                android:textColor="?attr/colorOnSecondary" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/description_word"
            style="@style/ThemeOverlay.Material3.TextInputEditText.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:focusedByDefault="true"
            android:hint="@string/description"
            android:padding="10dp"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusedByDefault="false"
                android:inputType="textMultiLine"
                android:textColor="?attr/colorOnSecondary" />
        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="?attr/backgroundColor" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>