<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/add_word_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="top"
    android:layout_margin="5dp"
    android:backgroundTint="?attr/backgroundColor"
    android:elevation="3dp"
    android:padding="10dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/backgroundColor"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@color/red"
            android:orientation="horizontal"
            android:weightSum="7"

            >

            <ImageButton
                android:id="@+id/cancel_word_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@color/red"
                android:elevation="0dp"
                android:src="@drawable/close_white" />

            <TextView
                android:id="@+id/add_word_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="3"
                android:text="@string/add_word"
                android:textColor="@color/white"
                android:textSize="20dp" />

            <Button
                android:id="@+id/save_word_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:backgroundTint="@color/red"
                android:elevation="0dp"
                android:gravity="center"
                android:outlineProvider="none"
                android:text="@string/save"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:textSize="20dp" />
        </LinearLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/main_word"
            style="@style/ThemeOverlay.Material3.TextInputEditText.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:focusedByDefault="true"
            android:padding="10dp"
            android:hint="@string/word"

           >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusedByDefault="false"
                android:textColor="?attr/colorOnSecondary"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            app:singleSelection="true"
            app:singleLine="true"
            app:selectionRequired="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/verb_chip"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verb"
            android:textSize="14dp"
            />
            <com.google.android.material.chip.Chip
                android:id="@+id/noun_chip"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/noun"
                android:textSize="14dp"
                />
            <com.google.android.material.chip.Chip
                android:id="@+id/adjective_chip"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adjective"
                android:textSize="14dp"
                />
            <com.google.android.material.chip.Chip
                android:id="@+id/adverb_chip"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adverb"
                android:textSize="14dp"
              />

        </com.google.android.material.chip.ChipGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/translation_word"
            style="@style/ThemeOverlay.Material3.TextInputEditText.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:focusedByDefault="true"
            android:padding="10dp"
            android:hint="@string/mean"

            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusedByDefault="false"
                android:textColor="?attr/colorOnSecondary"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/description_word"
            style="@style/ThemeOverlay.Material3.TextInputEditText.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:focusedByDefault="true"
            android:padding="10dp"
            android:hint="@string/description"

            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusedByDefault="false"
                android:textColor="?attr/colorOnSecondary"
                android:inputType="textMultiLine" />
        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="?attr/backgroundColor"
            />

    </LinearLayout>

</androidx.cardview.widget.CardView>