<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/add_word_card"
    android:backgroundTint="?attr/backgroundColor"
    android:elevation="3dp"
    app:cardCornerRadius="10dp"
    android:outlineProvider="bounds"
    android:layout_gravity="center"
    android:layout_margin="5dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="?attr/backgroundColor"
        >
     <TextView
         android:id="@+id/askTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/app_name"
         android:textSize="20sp"
         android:layout_gravity="center"
         android:gravity="center"
         android:textColor="?attr/colorOnSecondary"
         android:layout_marginTop="25dp"
         />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="15dp"
            android:weightSum="2">
            <Button
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:id="@+id/cancel_word_btn"
                android:textColor="@color/white"
                android:textSize="15dp"
                android:textAllCaps="false"
                android:layout_weight="1"
                android:background="@drawable/button_shape"
                />
            <Button
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_width="100dp"
                android:textAllCaps="false"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                android:id="@+id/delete_word_btn"
                android:textColor="@color/white"
                android:textSize="15dp"
                android:background="@drawable/button_shape"
                android:layout_weight="1"
                />

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>