<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    tools:context=".views.AboutAppActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/red"
        android:textSize="25dp"
        android:layout_margin="10dp"
        android:padding="5dp"
        />


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="?attr/colorOnPrimary"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="15dp"
            android:elevation="2dp"
            app:cardCornerRadius="15dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:text="@string/about_app_text"
                android:textColor="?attr/colorOnSecondary"
                android:textSize="14dp"
                android:layout_margin="10dp"
                android:padding="5dp"

                />
        </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:text="@string/app_version"
                android:textColor="?attr/colorOnSecondary"
                android:textSize="15dp"
                android:layout_margin="5dp"
                android:padding="5dp"

                />




    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/back_fab"
        android:backgroundTint="@color/red"
        android:src="@drawable/back"
        android:layout_gravity="end|bottom"
        android:layout_margin="15dp"

        />

</androidx.coordinatorlayout.widget.CoordinatorLayout>