<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    tools:context=".views.TextTranslateActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:padding="4dp"
        android:text="@string/text_translate"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:textSize="20dp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="?attr/colorOnPrimary"
        android:layout_margin="15dp"
        android:elevation="2dp"
        app:cardCornerRadius="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="7">
                <Spinner
                    android:id="@+id/idToSpinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:padding="3dp" />
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:src="@drawable/ic_baseline_arrow_right_alt_24"
                    app:tint="@color/red" />
                <Spinner
                    android:id="@+id/idFromSpinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:padding="3dp"
                    />
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginHorizontal="5dp"
                android:hint="@string/source_text"
                android:padding="5dp"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/idEdtSource"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:importantForAutofill="no"
                    android:inputType="textImeMultiLine|textMultiLine"
                    android:textSize="14sp"
                    android:textColor="?attr/colorOnSecondary"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/or"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="?attr/colorOnSecondary"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/idIVMic"
                android:layout_width="58dp"
                android:layout_height="58dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:src="@drawable/mic"
                app:tint="@color/red" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/saying"
                android:textAlignment="center"
                android:textColor="?attr/colorOnSecondary"
                android:textSize="15sp" />

            <Button
                android:id="@+id/idTranslateBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="20dp"
                android:background="@drawable/button_shape"
                android:text="@string/translate"
                android:textColor="@color/white"
                android:textSize="20dp" />
            <TextView
                android:id="@+id/download_info_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="5dp"
                android:visibility="gone"
                android:textAlignment="center"
                android:textColor="?attr/colorOnSecondary"
                android:textSize="12dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginHorizontal="5dp"
                android:hint="@string/translation"
                android:padding="5dp"

              >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/idTVTranslated"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:layout_gravity="start"
                    android:importantForAutofill="no"
                    android:inputType="textImeMultiLine|textMultiLine"
                    android:textSize="14sp"
                    android:textColor="?attr/colorOnSecondary"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/back_fab"
            android:backgroundTint="@color/red"
            android:src="@drawable/back"
            android:layout_gravity="end|bottom"
            android:layout_margin="15dp"

            />
    </androidx.cardview.widget.CardView>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>